--- a/src/main/webapp/WEB-INF/template-admin/template-admin-meny.xhtml
+++ b/src/main/webapp/WEB-INF/template-admin/template-admin-meny.xhtml
@@ -4,6 +4,11 @@
 
     <nav id="site-navigation" class="main-navigation" role="navigation">
         <div class="nav-menu">
+            <ul>
+                <li>Главная</li>
+                <li>Насройки</li>
+                <li>О программе</li>
+            </ul>
         </div>
     </nav>
 
