--- a/src/main/webapp/WEB-INF/template-admin/template-admin.xhtml
+++ b/src/main/webapp/WEB-INF/template-admin/template-admin.xhtml
@@ -1,41 +1,42 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html>
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core">
 
-    <f:view contentType="text/html" encoding="UTF-8">
-        <h:head>
-            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-            <meta http-equiv="Content-Language" content="uk" />
-            <meta http-equiv="Pragma" content="no-cache" />
-            <meta name="robots" content="noindex,nofollow" /><!-- @TODO: change this on 'ALL' for production -->
-            <meta name="allow-search" content="no" /><!-- @TODO: change this on 'yes' for production -->
-            <meta http-equiv="Author" content="Gerasimenko (g-art) Artem (gerasimenko.art@gmail.com)" />
+    <h:head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-            <link rel="stylesheet" type="text/css" href="#{request.contextPath}/styles/admin-style.css" />
+        <link rel="stylesheet" type="text/css" href="#{request.contextPath}/resources/admin-css/styles.css" />
 
-            <title>#{pageTitle}</title>
-            <meta name="keywords" content="#{!empty metaKeywords ? metaKeywords : 'default keywords'}" />
-            <meta name="description" content="#{!empty metaDescription ? metaDescription : 'default description'}" />
+        <title>#{pageTitle}</title>
+        <meta name="keywords" content="#{!empty metaKeywords ? metaKeywords : 'default keywords'}" />
+        <meta name="description" content="#{!empty metaDescription ? metaDescription : 'default description'}" />
 
-            <ui:insert name="head"></ui:insert>
-        </h:head>
-        <h:body>
-            <div id="page" class="hfeed site">
-                <header id="masthead" class="site-header" role="banner">
-                    <ui:include src="template-admin-meny.xhtml"/>
-                </header><!-- #masthead -->
+        <ui:insert name="head"></ui:insert>
+    </h:head>
 
-                <div id="main" class="wrapper">
-                    <ui:insert name="body"></ui:insert>
-                </div><!-- #main .wrapper -->
-                <div class="empty"></div>
-            </div><!-- #page -->
-            <div class="footerContainer">
-                <b>Copyright 2013</b> Створення цього веб-сайту стало можливим завдяки підтримці Американського Народу, наданій через Агентство США з міжнародного розвитку (USAID). Зміст цього веб-сайту є винятковою відповідальністю World Learning і його субконтрактера - Консорціуму із удосконалення менеджмент-освіти в Україні (CEUME) як виконавців проекту міжнародної технічної допомоги «Навчальні програми професійного зростання»  і не обов’язково відбиває погляди та позицію USAID або Уряду Сполучених Штатів Америки. <a href="/ugoda-konfidencijnosti ">Угода конфіденційності</a>
+    <h:body>
+        <div id="page" class="hfeed site">
+            <header id="masthead" class="site-header" role="banner">
+                <div id="logo">
+                </div>
+                <ui:include src="./template-admin-meny.xhtml"/>
+            </header>
+
+            <div id="main" class="wrapper">
+                <ui:insert name="body"></ui:insert>
             </div>
-        </h:body>
-    </f:view>
+            <div class="empty"></div>
+        </div><!-- #page -->
+        <div class="footerContainer">
+            <b>Copyright 2013</b>
+        </div>
+
+
+    </h:body>
+
+
+
 </html>
